--- a/footer.html
+++ b/footer.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <title>Hello, world!</title>
+    <title>Curso Bootstrap</title>
   </head>
-  <body data-spy="scroll" data-target="#navbar" data-offset="65">
+  <body data-spy="scroll" data-target="#navbar-nav" data-offset="65">
     <!-- Inicio Header-->
     <nav  id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
