--- a/footer.html
+++ b/footer.html
@@ -8,16 +8,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <title>Curso Bootstrap</title>
+    <title>Hello, world!</title>
   </head>
-  <body data-spy="scroll" data-target="#navbar-nav" data-offset="65">
+  <body data-spy="scroll" data-target="#navbar" data-offset="65">
     <!-- Inicio Header-->
     <nav  id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="assets/images/platzi-logo.png" alt="logo"> Conf Hawaii </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            </button> 
+            </button>
         
             <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ml-auto">
